# claudius

./: .env.example  .gitignore  CLAUDE.md  README.md  claudius_specification_1.md  mcp-servers.example.json  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml  homebrew.yml  release.yml
agent/: __init__.py  briefing.py  cli_bridge.py  config.py  mcp_client.py  research.py
src-tauri/: .gitignore  .gitkeep  Cargo.toml  README.md  tauri.conf.json
src-tauri/binaries/: imgplay-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/: mipmap-ldpi
src-tauri/scripts/: build-imgplay.sh
src-tauri/src/: chat.rs  commands.rs  config.rs  db.rs  dedup.rs  housekeeping.rs  image_gen.rs  lib.rs  main.rs  mcp_client.rs  notifications.rs  research.rs  research_log.rs  research_state.rs  scheduler.rs  schema.sql  tray.rs  updater.rs
