[package]
name = "claudius"
version = "0.2.1"
description = "A local AI research briefing agent"
authors = ["Chris Van Buskirk"]
license = "MIT"
repository = "https://github.com/chrisvanbuskirk/claudius"
edition = "2021"
default-run = "claudius-tauri"

# Library for shared code (used by both Tauri app and CLI)
[lib]
name = "claudius"
path = "src/lib.rs"

# Tauri desktop application
[[bin]]
name = "claudius-tauri"
path = "src/main.rs"

# Command-line interface
[[bin]]
name = "claudius"
path = "src/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-positioner = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
tokio-cron-scheduler = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
cron = "0.13"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
image = "0.25"
lazy_static = "1"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
colored = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
