[package]
name = "claudius"
version = "0.5.1"
description = "A local AI research briefing agent"
authors = ["Chris Van Buskirk"]
license = "MIT"
repository = "https://github.com/chrisvanbuskirk/claudius"
edition = "2021"
default-run = "ClaudiusApp"

# Library for shared code (used by both Tauri app and CLI)
[lib]
name = "claudius"
path = "src/lib.rs"

# Tauri desktop application (named to avoid case-insensitive conflict with CLI)
[[bin]]
name = "ClaudiusApp"
path = "src/main.rs"

# Command-line interface
[[bin]]
name = "claudius"
path = "src/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-positioner = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
image = "0.25"
lazy_static = "1"
strsim = "0.11"  # String similarity algorithms for deduplication
base64 = "0.22"  # Base64 encoding/decoding for DALL-E images

# CLI dependencies
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
colored = "2"
scopeguard = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
